--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-vue": "^4.2.8",
     "aws-amplify": "^6.3.4",
     "aws-amplify-vue": "^2.1.9",
     "axios": "^1.7.2",
