--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-localstorage": "^0.6.2",
     "vue-router": "^4.0.15",
     "vuex": "^4.0.2"
   },
