--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "aws-amplify": "^6.3.4",
     "aws-amplify-vue": "^2.1.9",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.1",
     "vue-localstorage": "^0.6.2",
     "vue-router": "^4.0.15",
     "vuex": "^4.0.2"
