--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "aws-amplify-vue": "^2.1.9",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "chartjs-adapter-moment": "^1.0.1",
     "core-js": "^3.8.3",
+    "moment": "^2.30.1",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.1",
     "vue-localstorage": "^0.6.2",
