--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "aws-amplify": "^6.3.4",
     "aws-amplify-vue": "^2.1.9",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "chartjs-adapter-moment": "^1.0.1",
     "core-js": "^3.8.3",
+    "flatpickr": "^4.6.13",
     "moment": "^2.30.1",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.1",
+    "vue-flatpickr-component": "^11.0.5",
     "vue-localstorage": "^0.6.2",
     "vue-router": "^4.0.15",
     "vuex": "^4.0.2"
